sort decimal point overflow issue

--- a/src/css/_displays.scss
+++ b/src/css/_displays.scss
@@ -12,6 +12,7 @@
   padding: 1.5rem 1.6rem;
   letter-spacing: 0.1rem;
   width: 100%;
+  overflow: hidden;
 }
 
 .topDisplay {
